--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-header></app-header>
+<button (click)="installPWA()" *ngIf="deferredPrompt">Añadir a la pantalla de inicio</button>
 <router-outlet></router-outlet>  <!-- Aquí se renderizan las rutas cargadas dinámicamente -->
 <app-footer></app-footer>
+
 
