--- a/src/app/features/public/commons/components/home-content/home-content.component.html
+++ b/src/app/features/public/commons/components/home-content/home-content.component.html
@@ -4,7 +4,9 @@
       <!-- Logo visible solo en dispositivos móviles -->
       <img class="mobile-logo" src="https://res.cloudinary.com/dqvwzivqe/image/upload/v1724739865/fmuhhj1k1jxzwixichyu.png" alt="Logo Pastelería Tony">
       <h1 class="bakery-name animate-fade-in">Pastelería Tony</h1>
-      <button class="cta-button animate-border-glow">Descubre nuestros pasteles</button>
+      <!-- <button (click)="installPWA()" *ngIf="deferredPrompt">Añadir a la pantalla de inicio</button> -->
+
+      <button class="cta-button animate-border-glow" (click)="installPWA()" *ngIf="deferredPrompt">Descubre nuestros pasteles</button>
     </div>
   </div>
 </div>
