--- a/src/app/features/public/commons/components/home-content/home-content.component.html
+++ b/src/app/features/public/commons/components/home-content/home-content.component.html
@@ -6,7 +6,7 @@
       <h1 class="bakery-name animate-fade-in">Pastelería Tony</h1>
       <!-- <button (click)="installPWA()" *ngIf="deferredPrompt">Añadir a la pantalla de inicio</button> -->
 
-      <button class="cta-button animate-border-glow" (click)="installPWA()" *ngIf="deferredPrompt">Descubre nuestros pasteles</button>
+      <button class="cta-button animate-border-glow" (click)="installPWA()" >Descubre nuestros pasteles</button>
     </div>
   </div>
 </div>
